# Eng.Soft.Cris

./: .gitignore  README.md  pyproject.toml  readme.md  send_email.py  setup.cfg
.github/workflows/: CI.yml
lag_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
poetry-demo/: README.md  main.py  pyproject.toml  requirements.txt  send_email.py  setup.cfg  test_lag.py  test_mock.py
