[project]
name = "lag_package"
version = "0.0.1"
description = "Pacote exemplo com a função lag"
authors = [
    {name = "Ramirez Silva", email = "uchihamake@hotmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6,<0.5.0",
    "emoji>=2.14.1,<3.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
