[project]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramirez-Wall",email = "uchihamake@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "emoji (>=2.14.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "poetry_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
